# mecha-grpc-server

./: Cargo.toml  README.md
battery_ctrl/: Cargo.toml
battery_ctrl/src/: power_supply.rs
bluetooth_manager/: Cargo.toml
bluetooth_manager/src/: bluetooth.rs
cpu_governor_ctrl/: Cargo.toml
cpu_governor_ctrl/src/: cpu_ctrl.rs  errors.rs  lib.rs
device_info/: Cargo.toml
device_info/src/: device_info.rs  errors.rs  lib.rs
display_ctrl/: Cargo.toml
display_ctrl/src/: display.rs  lib.rs
led_ctrl/: Cargo.toml
led_ctrl/src/: led.rs  lib.rs
metrics/: Cargo.toml
metrics/src/: errors.rs  lib.rs  metrics.rs
motion_sensor/: Cargo.toml
motion_sensor/src/: errors.rs  lib.rs  motion_sensor.rs
network_manager/: Cargo.toml
network_manager/src/wifi/: errors.rs  mod.rs  wifi.rs
sdk_server/: Cargo.toml  mecha_sdk_server_0.1.0.bb
sdk_server/src/: main.rs
sdk_server/src/services/: battery_ctrl_service.rs  cpu_ctrl_service.rs  device_info_service.rs  display_manager_service.rs  led_manager.rs  metrics_service.rs  mod.rs  motion_sensor_service.rs  network_manager_service.rs  trustzone_ctrl_service.rs
trustzone_ctrl/src/: errors.rs  lib.rs  trust_ctrl.rs
